# selftest-tool

./: .gitignore  pyproject.toml  requirements.txt
docs/: GUIDE.md
selftest/: cli.py  config.py  models.py
selftest/analyzer/: ast_analyzer.py  branch_extractor.py  import_resolver.py  random_detector.py
selftest/fixer/: interactive_apply.py  patch_generator.py  roo_exporter.py
selftest/generator/: ai_client.py  cache.py  dry_run.py  mock_factory.py  prompt_builder.py  test_builder.py
selftest/reporter/: html.py  terminal.py
selftest/rules/: default_rules.yaml  engine.py
selftest/runner/: coverage.py  executor.py
selftest/templates/: _base.md  report.html.j2
tests/: conftest.py  test_ai_client.py  test_ast_analyzer.py  test_branch_extractor.py  test_cache.py  test_cli.py  test_config.py  test_coverage.py  test_dry_run.py  test_executor.py  test_fixer.py  test_html_reporter.py  test_import_resolver.py  test_mock_factory.py  test_models.py  test_prompt_builder.py  test_random_detector.py  test_rules_engine.py  test_terminal_reporter.py  test_test_builder.py
tests/fixtures/: branching_script.py  multi_function_script.py  random_script.py  simple_script.py
